# hermes-feishu-agent

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile.bot  Dockerfile.car  README.md  docker-compose.bot.yml  docker-compose.car.yml  main.py  pyproject.toml
.claude/: settings.json
bench_tools/: __init__.py  handlers.py  jwt_auth.py  provision.py  register.py
bot/: CLAUDE.md  agent_pool.py  backend_role.py  car_booking_fsm.py  car_state.py  card_action_handler.py  curator_runner.py  dmz_memory.py  dry_run_state.py  fast_path.py  feedback.py  handler.py  identity_admin.py  intent.py  intent_router.py  replies.py  reservation_store.py  return_fsm.py
car_tools/: __init__.py  booking_mcp_server.py  card_builder.py  handlers.py  mcp_client.py  normalizers.py  notify_applicant.py  notify_dispatchers.py  register.py  schemas.py
config/: CLAUDE.md  __init__.py  settings.py
data/: identity_map.json.example
docs/: Hermes当前进度及总结.html  architecture.md  backend-security-feedback.md  deploy-fullstack-server.md  deployment.md  design-decisions.md  intent-routing-redesign.md  manual-verification-checklist.md  phase4-test-checklist.md  项目说明.html
feishu/: CLAUDE.md  message_pump.py  notify.py  sender.py  typing_indicator.py  ws_client.py
hermes_plugins/: __init__.py
infra/: CLAUDE.md  dedup.py  health.py  json_store.py  metrics.py
mock_api/: auth.py  fake_db.py  main.py  models.py  service.py  state_machine.py
mock_tools/: handlers.py  register.py
ocl/: CLAUDE.md  __init__.py  card_builder.py  content_filter.py  format_control.py  identity.py  intent_filter.py  (+7 more)
(+93 files in other folders)
