[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-feishu-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "hermes-agent",
    "lark-oapi>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "fastmcp>=2.0",  # 车辆预约 MCP server（car_tools/booking_mcp_server.py）
    "mcp>=1.9",       # FastMCP 依赖
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["feishu", "bot", "infra", "config", "ocl", "hermes_plugins", "car_tools"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
